applying contents class based on condition and scrollbar fixed

--- a/frontend/src/assets/css/layout.css
+++ b/frontend/src/assets/css/layout.css
@@ -81,7 +81,8 @@ body .wrapper {
 
 /*** 우측콘텐츠 ***/
 .contentsWarp {
-  width: calc(100% - 280px);
+  /* width: calc(100% - 280px); */
+  width: calc(100% - 320px);
   padding: 0;
 }
 
